--- a/src/components/Chip/Chip.module.css
+++ b/src/components/Chip/Chip.module.css
@@ -3,37 +3,44 @@
 }
 
 .container {
-    height: var(--size);
-    width: fit-content;
-    border-radius: var(--size);
-    display: flex;
-    align-items: center;
-    border: 1px solid silver;
-    box-sizing: border-box;
-    background-color: whitesmoke;
+  display: flex;
+  align-items: center;
+
+  inline-size: fit-content;
+  block-size: var(--size);
+  box-sizing: border-box;
+
+  border: 1px solid silver;
+  border-radius: var(--size);
+
+  background-color: whitesmoke;
 }
 
-.text{
-    padding-block: 4px;
-    padding-left: 8px;
-    padding-right: 4px;
+.text {
+  padding-block: 4px;
+  padding-inline: 8px 4px;
 
-    &:only-child{
-        padding-right: 8px;
-    }
+  &:only-child {
+    padding-inline-end: 8px;
+  }
 }
 
 .closeBtn {
-  height: var(--size);
-  width: var(--size);
-  margin-left: auto;
   display: flex;
-  align-items: center;
   justify-content: center;
-  border-radius: 50%;
-  background-color: rgba(0, 0, 0, 0.2);
+  align-items: center;
+
+  inline-size: var(--size);
+  block-size: var(--size);
+  margin-inline-start: auto;
+
   border: none;
+  border-radius: 50%;
+
+  background-color: rgba(0, 0, 0, 0.2);
+
   cursor: pointer;
+
   transition: background-color 0.1s linear;
 
   &:hover {
