--- a/src/app/style.css
+++ b/src/app/style.css
@@ -7,3 +7,12 @@
   margin-block-start: 20px;
   margin-inline: auto;
 }
+
+.error {
+  padding: 16px;
+
+  color: red;
+
+  border: 1px solid red;
+  border-radius: 16px;
+}
