--- a/src/widgets/ContributorsInfo/ContributorsInfo.module.css
+++ b/src/widgets/ContributorsInfo/ContributorsInfo.module.css
@@ -19,4 +19,18 @@
   max-block-size: 186px;
 
   overflow-y: auto;
+
+  &::-webkit-scrollbar {
+    inline-size: 4px;
+  }
+
+  &::-webkit-scrollbar-track {
+    background-color: whitesmoke;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    border-radius: 4px;
+
+    background-color: #3369f3;
+  }
 }
